@@ -3,6 +3,7 @@
 	* tryXpath/scripts/try_xpath_functions.js:
 	Modify getItemDetail function.
 	Define createHeaderRow function.
+	Add opts.createRow parameter to appendDetailRows function.
 
 2017-12-28  larissa9839  <larissa9839@gmail.com>
 
